--- a/scripts/eeSurv_viz.Rmd
+++ b/scripts/eeSurv_viz.Rmd
@@ -29,6 +29,10 @@ library(colorblindr)
 source("color_map.R")
 #source("ggplot_theme.R")
 ```
+# An R Package for ANOVA
+```{r}
+# library(ExpDes)
+```
 
 ## Load data & combine female and male events
 
